# haystack-rag

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
config/pipelines/doc_search/: pipeline_wrapper.py
data/input/: smoke-test-tech-docs.md
docs/: architecture.md  sap-create-employee-odata.md
eval/: retrieval_cases.json  retrieval_cases.user-template.json
scripts/: evaluate_answers.py  evaluate_retrieval.py  smoke_test_stack.py  start-hayhooks-mcp.sh  start-hayhooks.sh
services/hayhooks/: Dockerfile
src/haystack_rag/: config.py
src/haystack_rag/ingestion/: index_documents.py
src/haystack_rag/pipelines/: search_wrapper.py
tests/: test_eval_report.py  test_ingestion.py  test_source_ref.py
